# board-detect

./: CMakeLists.txt  main.cpp
include/: need.h
src/: need.cpp
